fix: adjust font size for attribution in leaflet container for better readability

--- a/css/style.css
+++ b/css/style.css
@@ -187,6 +187,10 @@ a:hover {
   color: #2b6cb0;
 }
 
+.leaflet-container .leaflet-control-attribution {
+  font-size: 0.6em;
+}
+
 @media (max-width: 800px) {
   .no-mobile {
     display: none;
